# tron

./: .flake8  .gitattributes  Auth.py  CHANGELOG.md  CHANGELOG.rst  Makefile  README.md  deep_reload.py  g.py  hub.py  passwords  programs.json  runhub.py  setup.cfg  svnVersion.py  tasks.py
.github/workflows/: release.yml  test.yml
CPL/: LLock.py  Logfile.py  Object.py  __init__.py  cfg.py  log.py  protocol.html  qstr.py  strcvt.py  tback.py  tcmd.py
CPL/Exceptions/: CmdError.py  Error.py
Client/: Actor.py  ClientFilter.py  Command.py  CommandLink.py  FilterQueue.py  FullReply.py  HubLink.py  README.txt  Reply.py  client.py
Docs/: 1.txt  DISchanges  FITS.txt  client.txt  nexpose.txt  procedures.txt  protocol.txt  security.txt
Hub/: __init__.py
Hub/Command/: Command.py  XXCommandDecoders.py  XXCommandEncoders.py  __init__.py
Hub/KV/: KVDict.py
Hub/Nub/: ActorNub.py  Commanders.py  CoreNub.py  Listeners.py  NubAuth.py  RawActorNub.py  ShellNub.py  SocketActorNub.py  SocketCommanderNub.py  TCCShellNub.py  __init__.py
Hub/Reply/: FullReply.py  Reply.py  ReplyTaster.py  __init__.py
IO/: Filehandler.py  IOHandler.py  PollAccept.py  PollConnect.py  PollHandler.py  ShellConnect.py  SocketHandler.py  __init__.py
Misc/: ID.py  LLock.py  Object.py  __init__.py  cdict.py  cfg.py  dates.py  location.py  log.py  logger.py  qstr.py  strcvt.py  tback.py  tcmd.py  tqstr.py
Misc/Exceptions/: CommError.py  Error.py  ICCError.py  __init__.py
Misc/FITS/: FITS.py  Makefile  __init__.py  wing  wing.wpu
Nubs/: TUI.py  alerts.py  apo.py  apogee.py  apogeecal.py  apogeeql.py  apogeetest.py  benchboss.py  bmo.py  boss.py  client.py  cmdin.py  cmdinauth.py  ecamera.py  extin.py  gcamera.py  guider.py  hartmann.py  mcp.py  nclient.py  ping.py  platedb.py  rawin.py  sop.py  tcc-john.py  tcc.py  tcc25m-old.py  telemetry.py  toy.py  zargs.py
Parsing/: Exceptions.py  __init__.py  args.py  dequote.py  keys.py
TclActor/: setup.py
TclActor/doc/: GMechActor.html  TclActor.html  TclActorInternals.html
TclActor/python/: gmech.py
TclActor/tests/: checkgmech.py  compareChecks.py
Vocab/: InternalCmd.py  bcast.py  hubCommands.py  keys.py  msg.py  perms.py
clients/: nohup.out  zargs.py
clients/expose/: ExpPath.py  InstExposure.py  disExpose.py  echelleExpose.py  expose.py  grimExpose.py  nicfpsExpose.py  spicamExpose.py  tspecExpose.py
clients/guiders/: AltaGCamera.py  CameraShim.py  GCamBase.py  GFrame.py  GimCtrlConnection.py  (+15 more)
config/: apo.py  hub.py  lco.py  local.py  test.py
etc/: tron.module
scripts/: dither.py  echelle-check.py  m3.py
tron/: Auth.py  __init__.py  hub.py  listActors.py  runhub.py
ups/: tron.table
(+181 files in other folders)
