[metadata]
name = sdss-tron
version = 1.0.0
author = Unknown
maintainer = José Sánchez-Gallego
maintainer_email = gallegoj@uw.edu
description = SDSS message passing system
url = https://github.com/sdss/tron
project_urls =
	Repository = https://github.com/sdss/tron
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
install_requires =
scripts =
  bin/tron

[options.package_data]
tron =
	*.json
	config/*.json

[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = tron
# multi_line_output = false
balanced_wrapping = true
include_trailing_comma = false
length_sort_stdlib = false
lines_after_imports = 2
use_parentheses = true
