[metadata]
name = sdss-tron
version = 5.0.1-alpha.0
author = Unknown
maintainer = José Sánchez-Gallego
maintainer_email = gallegoj@uw.edu
description = SDSS message passing system
url = https://github.com/sdss/tron
project_urls =
	Repository = https://github.com/sdss/tron
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
install_requires =
	sdsstools>=0.4.0
scripts =
  bin/tron

[options.package_data]
tron =
	*.json
	config/*.json

[options.extras_require]
dev =
	ipython>=7.13.0
	ipdb>=0.13.2
    isort>=5.0.0
    flake8>=3.8.4
	rstcheck>=3.3.1

[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = tron
# multi_line_output = false
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true
